# nawa

./: CONTRIBUTING.md  FINAL_STEPS.md  LICENSE  MARKETING.md  NAWA_SUMMARY.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  README_NAWA.md  arabic_lang.py  arabic_lang_advanced.py  index.html  nawa.py  publish_to_github.sh  pyproject.toml  setup.py  tasks.db
examples/: api_example.arab  calculator.arab  conditions.arab  ecommerce.arab  fibonacci.arab  file_ops.arab  hello.arab  loops.arab  nawa_crypto.nawa  nawa_files.nawa  nawa_hello.nawa  nawa_tasks.nawa  task_app.arab  task_app_simple.arab  test.arab  web_site.arab
